summative.moria.Moria.scala.code
var x = getDirection()
setDirection(Direction.NORTH);
while(!isOverBaggle) {
  forward();
}